# osu-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
.cargo/: config.toml
imports/: 1915203 The Arrogant Sons Of Bitches - The Last Bell I Will Ever Hear.osz
src/: config.rs  dialogue_app.rs  editor.rs  exports.rs  files.rs  gui.rs  hitbox_handlers.rs  imports.rs  kb_mouse_events.rs  layout.rs  logging.rs  main.rs  render.rs  skin.rs  treap.rs
src/audio/: audio_processor.rs  decode.rs  engine.rs  mod.rs  sample.rs
src/dotosu/: helpers.rs  mod.rs  osu_file.rs
src/dotosu/sections/: colours.rs  difficulty.rs  events.rs  general.rs  metadata.rs  mod.rs  objects.rs  timing.rs
src/geometry/: atomic_vec2.rs  mod.rs  vec2.rs  vec2_transform.rs
src/gpu/: gpu.rs  mod.rs  msaa.rs  textures.rs  timeline.rs  types.rs
src/gpu/shaders/: 00_defs.wgsl  10_common.wgsl  20_bg_hud.wgsl  30_circles.wgsl  40_sliders.wgsl  50_overlay.wgsl  60_selector_rect.wgsl  61_selector_text.wgsl  62_selector_image.wgsl
src/map_format/: beatmap.rs  beatmapset.rs  colors.rs  convert_from_osu_format.rs  convert_to_osu_format.rs  diff_settings.rs  events.rs  general.rs  mod.rs  objects.rs  slider_boxing.rs  slider_curve.rs  stacking.rs  timing.rs
src/state/: drag_state.rs  edit_state.rs  export_thread_state.rs  history.rs  hitsound_export.rs  hitsound_routing.rs  hitsound_sampleset_indices.rs  hitsound_thread_config.rs  map_state.rs  mod.rs  object.rs  selection.rs  snap_position.rs  snap_positions.rs
