[package]
name = "osu-editor"
version = "0.0.1"
edition = "2024"

[dependencies]
winit = "0.30.12"
zip = "7.1.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "28.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.149"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }

cpal = "0.17.1"
crossbeam-channel = "0.5.15"
ringbuf = "0.4.8"
rubato = "1.0.0"
audioadapter-buffers = "2.0"
symphonia = { version = "0.5.4", default-features = false, features = ["ogg", "aac", "mp3", "vorbis", "wav", "flac", "pcm", "adpcm", "isomp4", "alac"] }
soundtouch = { version = "0.5.1", features = ["bundled"] }
rand = "0.10.0"

[patch.crates-io]
soundtouch-ffi = { path = "vendor/soundtouch-ffi-0.3.0" }
